# physical-ai-demo-arm64-desktop-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  default.desktop
sources/: AgentClient.cpp  AgentClient.h  ChatWidget.cpp  ChatWidget.h  Constants.h  LoginWidget.cpp  LoginWidget.h  RoomMainWidget.cpp  RoomMainWidget.h
sources/TokenGenerator/: TokenGenerator.cpp  TokenGenerator.h
ui/: LoginWidget.ui  OperateWidget.ui  RoomMainWidget.ui  VideoWidget.ui
